--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,22 +14,25 @@
 
 
 <body>
-
     <h2>transform: rotate(20deg):</h2>
-    <div class="a">Hello World</div>
+    <div class="a">
+        Hello World
+    </div>
     <br>
-
     <h2>transform: skewY(20deg):</h2>
-    <div class="b">Hello World</div>
+    <div class="b">
+        Hello World
+    </div>
     <br>
-
     <h2>transform: scaleY(1.5):</h2>
-    <div class="c">Hello World</div>
+    <div class="c">
+        Hello World
+    </div>
 
-    <div class="transition"></div>
-    absolute and realtive example -->
+    <div class="transition">
+    </div>
+    <!-- absolute and realtive example -->
     <br> <br>
-
     <div class="animation">
 
     </div>
@@ -40,7 +43,7 @@
     <div class="absolute">
         <h1>good morning with absolute</h1>
     </div>
-    <br> -->
+    <br> 
 
     <div class="hero">
         <h1>good</h1>
@@ -61,6 +64,7 @@
         <button onclick="hello()" style="color: brown;"> click me</button>
         <button onclick="cli()" style="color: brown;"> click here</button>
     </div>
+     <!-- inline javascript -->
     <script>
 
         var data = "hello world";
