--- a/NavyWeb/images.html
+++ b/NavyWeb/images.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Arrays.js"></script>
-    <script src="function.js"></script>
+    <link rel="stylesheet" href="images.css">
+    <script src="/Frontend/function.js"></script>
+   
 </head>
 <body>
-    <h1>welcome to  arrays and Strings</h1>
+    <h1>images</h1>
+    <img src="/Frontend/Assets/sky.jpg" alt="" srcset="">
+   
 </body>
 </html>
