--- a/Frontend/oops.html
+++ b/Frontend/oops.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Arrays.js"></script>
-    <script src="function.js"></script>
+    <script src="/Frontend/oops.js"></script>
 </head>
 <body>
-    <h1>welcome to  arrays and Strings</h1>
+    <h1>oops </h1>
 </body>
 </html>
