--- a/BootstrapProject/Library.html
+++ b/BootstrapProject/Library.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>welcome to library</title>
-  <link rel="stylesheet" href="Style.css">
+  
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 
@@ -27,8 +27,8 @@
 </head>
 
 <body>
-  <h1>library</h1>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,7 +93,7 @@
          
         </div>
         <div class="col-sm-10">
-          <button class="btn btn-success" onclick="libraryFormSubmit()">Add Data</button>
+          <button class="btn btn-success" onclick="libraryFormSubmit()">Add Book</button>
         </div>
       </fieldset>
      
@@ -120,7 +120,7 @@
 
 
 
-  <script src="Server.js"></script>
+  <script src="Library.js"></script>
 </body>
 
 
