--- a/Frontend/bootstrap.html
+++ b/Frontend/bootstrap.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark">
+        <!-- Navbar content -->
+      
         <a class="navbar-brand" href="#">Hidden brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,9 +93,6 @@
         </div>
 
     </div>
-
-
-
 </body>
 
 </html>
