--- a/Frontend/Tags.html
+++ b/Frontend/Tags.html
@@ -8,13 +8,60 @@
 </head>
 <body>
     HTML : stands 
-   1. The <html> tag represents the root of an HTML document.
-   2. The HTML <title> element is used to represents the title of the HTML
-   3.HTML <meta> element is used to provide structured meta-information about a web page.
-   4.HTML <link> element is used to load an external style sheet into HTML document.
-   HTML <style> element is used to write CSS style to an HTML document. 
-   HTML <script> element used to defines client-side JavaScript that is specified within the document or 
-    embedded external JavaScript file through the SRC attribute.
-    HTML <base> element specifies a base URL for all the links within a web page.
+     <html> <!-- 1. The tag represents the root of an HTML document. -->
+
+    <title> <!--  2. The HTML element is used to represents the title of the HTML -->
+
+   <meta> <!--  3.HTML element is used to provide structured meta-information about a web page.-->
+
+ <link>  <!-- 4.HTML  element is used to load an external style sheet into HTML document.-->
+
+
+  <style>  /* is used to write CSS  to an  document. */
+
+  <script> /* HTML  element used to defines client-side JavaScript that is specified within the document or */
+          /* embedded external JavaScript file through the SRC attribute */
+
+    <base> /*  HTML element specifies a base URL for all the links within a web page c */
+
+    <h1> to </h1> to <h6></h6>/* 	Defines HTML headings */
+
+    <p>   /* 	Defines HTML paragraph */
+
+   <br>  	/* 	Defines HTML brake */
+
+    <footer> /*	It defines a footer for a section. */
+
+   <header>/*	It defines a header for a section.*/
+
+   <main>/*	It defines the main content of a document. */
+
+   <mark>/*It specifies the marked or highlighted content.*/
+
+    <menuitem> /*	It defines a command that the user can invoke from a popup menu. */
+
+<meter> /*	It is used to measure the scalar value within a given range.*/
+
+<nav>/*	It is used to define the navigation link in the document.*/
+
+<progress>/*	It specifies the progress of the task.*/
+
+<rp>/*	It defines what to show in browser that don't support ruby annotation.*/
+
+<rt>	/*It defines an explanation/pronunciation of characters.*/
+
+<ruby>/*	It defines ruby annotation along with <rp> and <rt>.*/
+
+<section>/*	It defines a section in the document.*/
+
+<summary>/*	It specifies a visible heading for <detailed> element.*/
+
+<svg>/*	It is used to display shapes.*/
+
+<time>/*	It is used to define a date/time.*/
+
+<video>	/* It is used to play video file in HTML.*/
+    
+<wbr>	/* It defines a possible line break.*/
 </body>
 </html>
